# toml-schema

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: run_tests.yml
examples/: README.md  pyproject.toml  pyproject.toml-schema
examples/schemastore-negative-test/pyproject/: black-invalid.errors.txt  black-target.errors.txt  cibuildwheel-bad-inherit.errors.txt  cibuildwheel-unreco.errors.txt  dependency-groups-1.errors.txt  dependency-groups-2.errors.txt  dependency-groups-3.errors.txt  extra-top-level.errors.txt  mypy-emptymodule.errors.txt  mypy-extra.errors.txt  mypy-nomodule.errors.txt  pdm-path-required.errors.txt  pdm-script-method-exclusive.errors.txt  pdm-source-no-name.errors.txt  poetry-bad-multiline.errors.txt  poetry-plugin-dotenv-example-1.errors.txt  poetry-source-1.errors.txt  poetry-source-2.errors.txt  poetry-source-3.errors.txt  poetry-source-4.errors.txt  repo-review-extra-field.errors.txt  repo-review-invalid-code.errors.txt  ruff-bad-line-length.errors.txt  scikit-build-no-template.errors.txt  scikit-build-unknown.errors.txt  setuptools-invalid-find.errors.txt  tox-invalid-legacy.errors.txt  uv-bad-index-url.errors.txt
examples/validate-pyproject-invalid/pdm/invalid-version/: pyproject.errors.txt
examples/validate-pyproject-invalid/pdm/redefining-as-dynamic/: pyproject.errors.txt
examples/validate-pyproject-invalid/pep621/incorrect-subtables/: author_with_extra_fields.errors.txt
examples/validate-pyproject-invalid/pep621/non-standardised-project-fields/: requires_instead_of_dependencies.errors.txt
examples/validate-pyproject-invalid/pep735/: invalid-group.errors.txt  invalid-key.errors.txt
examples/validate-pyproject-invalid/ruff/: badcode.errors.txt
examples/validate-pyproject-invalid/setuptools/attr/: missing-attr-name.errors.txt
examples/validate-pyproject-invalid/setuptools/dynamic/: readme-missing-file.errors.txt  readme-too-many.errors.txt
examples/validate-pyproject-invalid/setuptools/ext-modules/: invalid-field.errors.txt  invalid-sources.errors.txt  missing-ext-name.errors.txt
examples/validate-pyproject-invalid/setuptools/package-dir/: invalid-name.errors.txt
examples/validate-pyproject-invalid/setuptools/pep621/readme/: readme-without-content-type.errors.txt
examples/validate-pyproject-invalid/store/: cibw-overrides-noselect.errors.txt  cibw-unknown-option.errors.txt  ruff-unknown.errors.txt
schemastore/: README.md  hatch.json  hatch.schema.toml  maturin.json  maturin.schema.toml  partial-black.json  partial-black.schema.toml  partial-cibuildwheel.json  partial-cibuildwheel.schema.toml  partial-mypy.json  partial-mypy.schema.toml  partial-pdm-dockerize.json  partial-pdm-dockerize.schema.toml  partial-pdm.json  partial-pdm.schema.toml  partial-pdm.toml-schema  partial-poe.json  partial-poe.schema.toml  partial-poetry.json  partial-poetry.schema.toml  partial-poetry.toml-schema  partial-pyright.json  partial-pyright.schema.toml  partial-pyright.toml-schema  partial-pytest.json  partial-pytest.schema.toml  partial-pytest.toml-schema  partial-repo-review.json  partial-repo-review.schema.toml  partial-scikit-build.json  partial-scikit-build.schema.toml  partial-setuptools-scm.json  partial-setuptools-scm.schema.toml  partial-setuptools.json  partial-setuptools.schema.toml  partial-taskipy.json  partial-taskipy.schema.toml  partial-taskipy.toml-schema  partial-tox.json  partial-tox.schema.toml  (+11 more)
tests/: test_pyproject_schema.py  test_schema.py
toml_schema/: __init__.py  __main__.py  _toml_schema.py
tools/: json_to_toml.py
